@@ -1,0 +1,42 @@
+# libgsequencer_check_system_test.la - a libtool library file
+# Generated by libtool (GNU libtool) 2.4.6 Debian-2.4.6-14
+#
+# Please DO NOT delete this file!
+# It is necessary for linking the library.
+
+# The name that we can dlopen(3).
+dlname=''
+
+# Names of this library.
+library_names=''
+
+# The name of the static archive.
+old_library='libgsequencer_check_system_test.a'
+
+# Linker flags that cannot go in dependency_libs.
+inherited_linker_flags=' -pthread'
+
+# Libraries that this one depends upon.
+dependency_libs=' -L//usr/lib -L/usr/lib64 -L//usr/lib/gsequencer/ /home/joelkraehemann/nongnu/gsequencer/libgsequencer.la /home/joelkraehemann/nongnu/gsequencer/libags_audio.la -lsamplerate /home/joelkraehemann/nongnu/gsequencer/libags_server.la /home/joelkraehemann/nongnu/gsequencer/libags_gui.la /home/joelkraehemann/nongnu/gsequencer/libags_thread.la /home/joelkraehemann/nongnu/gsequencer/libags.la -luuid -lcrypt -lfftw3 -lpulse-mainloop-glib -lpulse -lwebkit2gtk-4.0 -ljavascriptcoregtk-4.0 -ldl -lcunit -lXtst -lasound -lxml2 -linstpatch-1.0 -lsndfile -lgmodule-2.0 -lgthread-2.0 -lsoup-2.4 -ljack -lgstapp-1.0 -lgstpbutils-1.0 -lgstaudio-1.0 -lgstvideo-1.0 -lgstbase-1.0 -lgsttag-1.0 -lgstreamer-1.0 -lgtk-3 -lgdk-3 -lpangocairo-1.0 -lpango-1.0 -lharfbuzz -latk-1.0 -lcairo-gobject -lcairo -lgdk_pixbuf-2.0 -lgio-2.0 -lgobject-2.0 -lglib-2.0 -lrt -lm -lX11'
+
+# Names of additional weak libraries provided by this library
+weak_library_names=''
+
+# Version information for libgsequencer_check_system_test.
+current=0
+age=0
+revision=1
+
+# Is this an already installed library?
+installed=no
+
+# Should we warn about portability when linking against -modules?
+shouldnotlink=no
+
+# Files to dlopen/dlpreopen
+dlopen=''
+dlpreopen=''
+
+# Directory that this library needs to be installed in:
+libdir=''
+relink_command="(cd /home/joelkraehemann/nongnu/gsequencer; /bin/bash \"/home/joelkraehemann/nongnu/gsequencer/libtool\"  --tag CC --mode=relink gcc -g -O2 -I/usr/include/libxml2 -pthread -I/usr/include/libinstpatch-2 -I/usr/include/glib-2.0 -I/usr/lib/x86_64-linux-gnu/glib-2.0/include -pthread -I/usr/include/glib-2.0 -I/usr/lib/x86_64-linux-gnu/glib-2.0/include -pthread -I/usr/include/libsoup-2.4 -I/usr/include/libxml2 -I/usr/include/libmount -I/usr/include/blkid -I/usr/include/glib-2.0 -I/usr/lib/x86_64-linux-gnu/glib-2.0/include -pthread -I/usr/include/gstreamer-1.0 -I/usr/include/orc-0.4 -I/usr/include/gstreamer-1.0 -I/usr/include/x86_64-linux-gnu -I/usr/include/glib-2.0 -I/usr/lib/x86_64-linux-gnu/glib-2.0/include -I/usr/include/cairo -I/usr/include/glib-2.0 -I/usr/lib/x86_64-linux-gnu/glib-2.0/include -I/usr/include/pixman-1 -I/usr/include/uuid -I/usr/include/freetype2 -I/usr/include/libpng16 -pthread -I/usr/include/gtk-3.0 -I/usr/include/at-spi2-atk/2.0 -I/usr/include/at-spi-2.0 -I/usr/include/dbus-1.0 -I/usr/lib/x86_64-linux-gnu/dbus-1.0/include -I/usr/include/gtk-3.0 -I/usr/include/gio-unix-2.0 -I/usr/include/cairo -I/usr/include/pango-1.0 -I/usr/include/fribidi -I/usr/include/harfbuzz -I/usr/include/atk-1.0 -I/usr/include/cairo -I/usr/include/pixman-1 -I/usr/include/uuid -I/usr/include/freetype2 -I/usr/include/libpng16 -I/usr/include/gdk-pixbuf-2.0 -I/usr/include/libmount -I/usr/include/blkid -I/usr/include/glib-2.0 -I/usr/lib/x86_64-linux-gnu/glib-2.0/include -g -O2 -o libgsequencer_check_system_test.la ags/test/X/libgsequencer_check_system_test_la-gsequencer_setup_util.lo ags/test/X/libgsequencer_check_system_test_la-ags_functional_test_util.lo -L//usr/lib -lags -lags_thread -lags_server -lags_audio -lags_gui -L//usr/lib/gsequencer/ -lgsequencer -lcunit -lrt -lm -lXtst -lasound -lxml2 -lsndfile -L/usr/lib64 -linstpatch-1.0 -lgobject-2.0 -lgthread-2.0 -pthread -lglib-2.0 -lsndfile -lgobject-2.0 -Wl,--export-dynamic -lgmodule-2.0 -pthread -lgthread-2.0 -pthread -lglib-2.0 -lsoup-2.4 -lgio-2.0 -lgobject-2.0 -lglib-2.0 -ljack -lgstapp-1.0 -lgstpbutils-1.0 -lgstaudio-1.0 -lgstvideo-1.0 -lgstbase-1.0 -lgsttag-1.0 -lgstreamer-1.0 -lgobject-2.0 -lglib-2.0 -lcairo -lgtk-3 -lgdk-3 -lpangocairo-1.0 -lpango-1.0 -lharfbuzz -latk-1.0 -lcairo-gobject -lcairo -lgdk_pixbuf-2.0 -lgio-2.0 -lgobject-2.0 -lglib-2.0 -lrt -lm -lX11 @inst_prefix_dir@)"
