@@ -2028,7 +2028,7 @@ ags_check_system_xorg_application_context_test_LDADD = -L$(DESTDIR)/$(libdir) -l
 ags-parallel-check-system-unit-test: $(libags_installcheck_programs) $(libags_audio_installcheck_programs) $(libgsequencer_installcheck_programs)
 	parallel -j 10 < ags_check_system_unit_programs
 
-ags-check-system-unit-tests: $(libags_installcheck_programs) $(libags_audio_installcheck_programs) $(libgsequencer_installcheck_programs)
+ags-check-system-unit-test: $(libags_installcheck_programs) $(libags_audio_installcheck_programs) $(libgsequencer_installcheck_programs)
 	./ags_check_system_buffer_util_test
 	./ags_check_system_complex_test
 	./ags_check_system_conversion_test
